--- a/global.css
+++ b/global.css
@@ -3,10 +3,8 @@ body {
   font-family: Arial, sans-serif;
   text-align: center;
   background-image: url("/images/bg-img.jpeg");
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-repeat: repeat;
 }
-
 h1 {
   color: #ffffff;
   background-color: #0f0cd0;
@@ -53,24 +51,25 @@ button:active {
 
 /* Define a style for the card container */
 .card-container {
-  display: flex; /* Use flexbox to arrange cards horizontally */
-  flex-wrap: wrap; /* Allow cards to wrap to the next row */
-  justify-content: center; /* Center-align cards horizontally */
-  gap: 20px; /* Add some spacing between cards */
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
 }
 
-
-/* Define a style for the card container */
+/* Style the card */
 .card {
   background-color: #000000;
   border: 1px solid #dddddd;
   border-radius: 50px;
-  margin: 10px;
   padding: 10px;
   white-space: pre-wrap;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  margin: 10px;
+  margin-bottom: 20px; /* Add some bottom margin to separate rows */
   width: 300px;
-  margin: 0 auto;
+  max-height: 300px; /* Set a maximum height */
+  overflow: auto; /* Enable vertical scrolling if content overflows */
 }
 
 /* Style the heading (anime title) */
